--- a/FL12_HW1/homework/index.html
+++ b/FL12_HW1/homework/index.html
@@ -16,13 +16,13 @@
           <h1>HTML Elements</h1>
           <hr>
           <strong>
-            <a href="#">Home</a>
-            <a href="#">Headings</a>
-            <a href="#">Text formats</a>
-            <a href="#">Types of lists</a>
-            <a href="#">Table</a>
-            <a href="#">Blockquotes</a>
-            <a href="#">Registration</a>
+            &nbsp&nbsp<a href="#">Home</a>&nbsp&nbsp&nbsp
+            <a href="#">Headings</a>&nbsp&nbsp&nbsp
+            <a href="#">Text formats</a>&nbsp&nbsp&nbsp
+            <a href="#">Types of lists</a>&nbsp&nbsp&nbsp
+            <a href="#">Table</a>&nbsp&nbsp&nbsp
+            <a href="#">Blockquotes</a>&nbsp&nbsp&nbsp
+            <a href="#">Registration</a>&nbsp&nbsp&nbsp
           </strong>
           <hr>
           <p>
@@ -35,7 +35,7 @@
             <sup>4</sup> = 256.
             Water is H<sub>3</sub>PO<sub>4</sub>.
             Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula, nisl.
-            <i>Time Magazine</i>
+            <em>Time Magazine</em>
             (That’s a citation).
             <u>Underline.</u>
             Maecenas ornare tortor. Donec sed tellus eget sapien fringilla nonummy. Mauris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus.
@@ -52,10 +52,111 @@
             auris a ante. Suspendisse quam sem, consequat at, commodo vitae, feugiat in, nunc. Morbi imperdiet augue quis tellus. Praesent mattis, massa quis luctus fermentum. To copy a file type
             COPY
             <em>filename</em>.
-            The meeting began at 7pm
+            <s>The meeting began at 7pm</s>
             <mark>Let’s make that 6.</mark>
-            This text has been struck.
+            This <s>text</s> has been struck.
           </p>
+          <hr>
+          h1 defines the most important heading. h6 defines the least important heading. Font-size for h1 is the same as font-size for h2, because we have to use only one h1 on the page, and it is commonly used inside header
+          <h2>Heading 2</h2>
+          <h3>Heading 3</h3>
+          <h4>Heading 4</h4>
+          <h5>Heading 5</h5>
+          <h6>Heading 6</h6>
+          <hr>
+          <h2>Text formats</h2>
+          <h3>Article</h3>
+          <h2>Article title</h2>
+          <h5>Article description</h5>
+          <h3>Preformatted Text</h3>
+          <pre>
+Text in a <strong>pre</strong> element
+is displayed in a fixed-width
+font, and it preserves
+both           <strong>spaces</strong> and
+<strong>line breaks</strong>
+          </pre>
+          <h3>This is code</h3>
+          <pre>
+            .flex {
+  display: flex;
+  justify-content: justify;
+  aliign-items: center;
+}
+          </pre>
+          <h2>Unordered Wish List</h2>
+          <ul>
+            <li>Iphone 11 pro max</li>
+            <li>Books:
+              <ul>
+                <li>Clean code principles javascript</li>
+                <li>You don't know JS</li>
+                <li>Angular Pro</li>
+              </ul>
+            </li>
+            <li>Headphones</li>
+          </ul>
+          <h2>Ordered Task List</h2>
+          <ol>
+            <li>Pay the bills</li>
+            <li>Refuel the car</li>
+            <li>Finish homework
+              <ol>
+                <li>Create HTML page according to the requirements</li>
+                <li>Upload to the GitHub repository</li>
+              </ol>
+            </li>
+            <li>Enjoy your day</li>
+          </ol>
+          <h3>Definition List</h3>
+          <dl>
+            <dt>HTML</dt>
+            <dd>HTML is the standard markup language to create Web pages.</dd>
+            <dt>CSS</dt>
+            <dd>CSS describes how HTML elements are to be displayed.</dd>
+            <dt>JavaScript</dt>
+            <dd>JavaScript is a scripting languages, primarily used on the Web.</dd>
+          </dl>
+          <label for="select">Select for learning</label>
+          <select id="select" name="select">
+            <option value="JS">JS</option>
+            <option value="HTML">HTML</option>
+            <option value="CSS">CSS</option>
+          </select>
+          <hr>
+          <hr>
+          <h2>Table</h2>
+          <table>
+            <thead>
+            <tr>
+              <th>Skill</th>
+              <th>Training</th>
+              <th>City</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+              <td>JAVA</td>
+              <td>JAVA development training</td>
+              <td>Lviv</td>
+            </tr>
+            <tr>
+              <td>JAVASCRIPT</td>
+              <td>FRONT-END development</td>
+              <td>Kharkiv</td>
+            </tr>
+            <tr>
+              <td>IOS</td>
+              <td>IOS winter 2019</td>
+              <td>Kyiv</td>
+            </tr>
+            <tr>
+              <td>DEVOPS</td>
+              <td>DEVOPS spring 2020</td>
+              <td>Dnipro</td>
+            </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
