homework 1 is finished

--- a/FL12_HW1/homework/index.html
+++ b/FL12_HW1/homework/index.html
@@ -12,18 +12,20 @@
     <div id="main">
       <div id="container">
         <div id="content" role="main">
-          <!-- TODO: Content goes here -->
+          <img src="logo.png" alt="Logo">
           <h1>HTML Elements</h1>
           <hr>
-          <strong>
-            &nbsp&nbsp<a href="#">Home</a>&nbsp&nbsp&nbsp
-            <a href="#">Headings</a>&nbsp&nbsp&nbsp
-            <a href="#">Text formats</a>&nbsp&nbsp&nbsp
-            <a href="#">Types of lists</a>&nbsp&nbsp&nbsp
-            <a href="#">Table</a>&nbsp&nbsp&nbsp
-            <a href="#">Blockquotes</a>&nbsp&nbsp&nbsp
-            <a href="#">Registration</a>&nbsp&nbsp&nbsp
-          </strong>
+          <nav>
+              <strong>
+                  &nbsp; &nbsp; <a href="#">Home</a> &nbsp; &nbsp; &nbsp;
+                  <a href="#">Headings</a> &nbsp; &nbsp; &nbsp;
+                  <a href="#">Text formats</a> &nbsp; &nbsp; &nbsp;
+                  <a href="#">Types of lists</a> &nbsp; &nbsp; &nbsp;
+                  <a href="#">Table</a> &nbsp; &nbsp; &nbsp;
+                  <a href="#">Blockquotes</a> &nbsp; &nbsp; &nbsp;
+                  <a href="#">Registration</a> &nbsp; &nbsp; &nbsp;
+              </strong>
+          </nav>
           <hr>
           <p>
             Lorem ipsum dolor sit amet,
@@ -157,6 +159,37 @@ both           <strong>spaces</strong> and
             </tr>
             </tbody>
           </table>
+            <h2>Blockquotes</h2>
+            <p>Let’s keep it simple. Italics are good to help set it off from the body text. Be sure to style the citation.</p>
+            <blockquote>
+                "So if you want to go fast, if you want to get done quickly, if you want your code to be easy to write,
+                make it easy to read."
+                <p><a href="#">Robert C. Martin (Uncle Bob)</a></p>
+            </blockquote>
+            <form action="#">
+                <fieldset>
+                    <p>
+                        <label>Username:
+                            <input type="text">
+                        </label>
+                    </p>
+                    <p>
+                        <label>Email:
+                            <input type="email">
+                        </label>
+                    </p>
+                    <p>
+                        <label>Password:
+                            <input type="password">
+                        </label>
+                    </p>
+                    <p><textarea rows="10" cols="23"></textarea></p>
+                    <p><input type="submit" value="Submit"></p>
+                </fieldset>
+            </form>
+            <footer>
+                &copy; Copyright Epam Systems
+            </footer>
         </div>
       </div>
     </div>
