--- a/FL12_HW1/homework/index.html
+++ b/FL12_HW1/homework/index.html
@@ -15,17 +15,19 @@
           <img src="logo.png" alt="Logo">
           <h1>HTML Elements</h1>
           <hr>
-          <nav>
-              <strong>
-                  &nbsp; &nbsp; <a href="#">Home</a> &nbsp; &nbsp; &nbsp;
-                  <a href="#">Headings</a> &nbsp; &nbsp; &nbsp;
-                  <a href="#">Text formats</a> &nbsp; &nbsp; &nbsp;
-                  <a href="#">Types of lists</a> &nbsp; &nbsp; &nbsp;
-                  <a href="#">Table</a> &nbsp; &nbsp; &nbsp;
-                  <a href="#">Blockquotes</a> &nbsp; &nbsp; &nbsp;
-                  <a href="#">Registration</a> &nbsp; &nbsp; &nbsp;
-              </strong>
-          </nav>
+            <header>
+                <nav>
+                    <strong>
+                        &nbsp; &nbsp; <a href="#">Home</a> &nbsp; &nbsp; &nbsp;
+                        <a href="#">Headings</a> &nbsp; &nbsp; &nbsp;
+                        <a href="#">Text formats</a> &nbsp; &nbsp; &nbsp;
+                        <a href="#">Types of lists</a> &nbsp; &nbsp; &nbsp;
+                        <a href="#">Table</a> &nbsp; &nbsp; &nbsp;
+                        <a href="#">Blockquotes</a> &nbsp; &nbsp; &nbsp;
+                        <a href="#">Registration</a> &nbsp; &nbsp; &nbsp;
+                    </strong>
+                </nav>
+            </header>
           <hr>
           <p>
             Lorem ipsum dolor sit amet,
