homework 2 is finished

--- a/FL12_HW2/homework/index.html
+++ b/FL12_HW2/homework/index.html
@@ -281,6 +281,7 @@ Property align-items: center;, so that child divs align to the center of VERTICA
 
   </div>
 
+    <div class="arrow-right"></div>
 </div>
 
 </body>
